--- a/start/index.html
+++ b/start/index.html
@@ -14,55 +14,52 @@
         section.sidebar{
             display: flex;
             flex-direction: column;
-            height: 100%;
+            height: 100vh;
             width: 200px;
+            justify-content: center;
             
         }
 
-        div{
-            background-color: rgb(195, 206, 194);
-            margin: 3px;
+        div.user-info{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-        div>a{
+        .user-img{
+            width: 50%;
+        }
+
+       
+        section.sidebar>a{
             flex: 1;
             color:  #2b2b2b;
         }
 
-        div>a:hover{
+        section.sidebar>a:hover{
             color:  #2b2bb2;
             transition: 0.3s;
         }
-
-        div.user-info{
-            text-align: center;
-        }
-
 
     </style>
 </head>
 
 <body>
     <section class="sidebar">
-        <div>
             <img src="assets/logo.png" alt="immagine logo" width="100%">
-        </div>
-        <div>
+
             <a href="#">Prodotti</a>
-        </div>
-        <div>
+
             <a href="#">Chi siamo</a>
-        </div>
-        <div>
+
             <a href="#">Contatti</a>
-        </div>
-        <div>
+
             <a href="#">Lavora con noi</a>
-        </div>
-        <div class="user-info">
-            <img src="assets/user.png" alt="immagine utente" width="50%">
-            <p>Ludovico Colucci</p>
-        </div>
+            <div class="user-info">
+                <img class="user-img" src="assets/user.png" alt="immagine utente">
+
+                <p class="user-name">Ludovico Colucci</p>
+            </div>
 
 
 
